# -Project_HW

./: .flake8  README.md  main.py  mypy.ini  pyproject.toml
src/: __init__.py  masks.py  proccesing.py  widget.py
src/processing/: filters.py
